- Centered HBox with buttons inside controlPane by setting alignment to CENTER - Updated style.css to set background colors for control-pane and particle-space - Set background color for Canvas in ParticleSpace class using GraphicsContext - Fixed incorrect Color constructor usage by replacing with Color.web method

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,14 +1,20 @@
 .control-pane {
-    -fx-background-color: red;
+    -fx-background-color: #000000;
     -fx-padding: 30px 40px;
     -fx-alignment: center;
 }
 
 .start-button{
     -fx-font-size: 20px;
-    -fx-background-color: #4CAF50;
-    -fx-text-fill: white;
-    -fx-padding: 10px 20px;
-    -fx-border-radius: 5px;
+    -fx-background-color: none;
+    -fx-text-fill: #ceb65b;
+    -fx-border-color: #ceb65b;
+    -fx-border-width: 1px;
+    -fx-padding: 10px 50px;
     -fx-cursor: hand;
+}
+
+.particle-space{
+    -fx-background-color: #f0f0f0;
+    -fx-padding: 20px;
 }
